<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="?attr/actionBarSize"
    tools:context=".fragments.DutchOvenFragment">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/size_label"
                    android:layout_width="150dip"
                    android:layout_height="20dip"
                    android:gravity="center_horizontal"
                    android:text="@string/size_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/temperature_label"
                    android:layout_width="150dip"
                    android:layout_height="20dip"
                    android:gravity="center_horizontal"
                    android:text="@string/temperature_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cook_style_label"
                    android:layout_width="150dip"
                    android:layout_height="20dip"
                    android:gravity="center_horizontal"
                    android:text="@string/method_label"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <app.troop1018.org.troop1018.wheel.WheelView
                    android:id="@+id/size_wheel"
                    android:layout_width="150dip"
                    android:layout_height="100dip" />

                <app.troop1018.org.troop1018.wheel.WheelView
                    android:id="@+id/temperature_wheel"
                    android:layout_width="150dip"
                    android:layout_height="100dip" />

                <app.troop1018.org.troop1018.wheel.WheelView
                    android:id="@+id/cook_style_wheel"
                    android:layout_width="150dip"
                    android:layout_height="100dip" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingTop="30dp">

                <TextView
                    android:id="@+id/briquettes_above_label"
                    android:layout_width="300dip"
                    android:layout_height="55dip"
                    android:gravity="end"
                    android:text="@string/briquettes_on_top"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/num_briquettes_above"
                    android:layout_width="55dip"
                    android:layout_height="60dip"
                    android:gravity="end"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/briquettes_below_label"
                    android:layout_width="300dip"
                    android:layout_height="55dip"
                    android:gravity="end"
                    android:text="@string/briquettes_underneath"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/num_briquettes_below"
                    android:layout_width="55dip"
                    android:layout_height="60dip"
                    android:gravity="end"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/briquettes_total_label"
                    android:layout_width="300dip"
                    android:layout_height="55dip"
                    android:gravity="end"
                    android:text="@string/total_briquettes"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/num_briquettes_total"
                    android:layout_width="55dip"
                    android:layout_height="60dip"
                    android:gravity="end"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageView
                android:id="@+id/method_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:paddingLeft="10dp"
                android:src="@drawable/method1" />

            <ImageView
                android:id="@+id/dos_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:paddingTop="10dp"
                android:src="@drawable/dos" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>